style: fix layout overflow and horizontal scrollbar

--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ body::before {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.15) 50%), linear-gradient(90deg, rgba(0, 242, 255, 0.02), rgba(112, 0, 255, 0.01), rgba(0, 242, 255, 0.02));
   background-size: 100% 3px, 6px 100%;
